# botwire

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
examples/: collect_rlds_dataset.py  deploy_gemini_agent.py  train_il_act.py  train_rl_brax.py
src/botwire/: __init__.py
src/botwire/agents/: __init__.py  base.py  bc.py  d4pg.py  networks.py  sac.py
src/botwire/common/: __init__.py  abc.py  types.py  utils.py
src/botwire/configs/: __init__.py  agent_config.py  dataset_config.py  env_config.py  policy_config.py  train_config.py
src/botwire/controllers/: __init__.py  base.py  cartesian.py
src/botwire/datasets/: __init__.py  loaders.py  rlds_dataset.py  rlds_writer.py  transforms.py  utils.py
src/botwire/envs/: __init__.py  brax_env.py  menagerie.py  moma_env.py  utils.py  wrappers.py
src/botwire/hub/: __init__.py  download.py  upload.py
src/botwire/policies/: __init__.py  base.py
src/botwire/policies/act/: __init__.py  config.py  modeling.py
src/botwire/policies/diffusion/: __init__.py  modeling.py  noise_scheduler.py
src/botwire/policies/vla/: __init__.py  gemini_bridge.py  modeling.py
src/botwire/scripts/: botwire_collect.py  botwire_eval.py  botwire_train.py  botwire_upload.py
src/botwire/training/: __init__.py  checkpointing.py  il_trainer.py  logger.py  rl_trainer.py
tests/: test_agents.py  test_common.py  test_configs.py  test_envs.py  test_policies.py
